--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "export TZ=UTC; mocha --recursive test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "alexa-app": "^2.3.4",
     "lodash": "^4.16.4",
+    "moment": "^2.15.1",
+    "moment-timezone": "^0.5.7",
+    "request": "^2.75.0",
+    "request-promise": "^4.1.1",
     "timezone": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "expect.js": "^0.3.1",
-    "mocha": "^3.1.2"
+    "mocha": "^3.1.2",
+    "mockery": "^2.0.0",
+    "timekeeper": "^0.1.1"
   }
 }
